unpackaged/main/default/objects/Admin_Ref_Variable__mdt/Admin_Ref_Variable__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata is used to allow admins to adjust variables that are used in Apex flows</description>
    <label>Admin Ref Variable</label>
    <pluralLabel>Admin Ref Variables</pluralLabel>
</CustomObject>