unpackaged/main/default/objects/Admin_Ref_Variable__mdt/fields/Change_Downstream_Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Change_Downstream_Order_Owner__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If unchecked, will bypass downstream ownership change of Orders triggered by parent account owner change</description>
    <inlineHelpText>If unchecked, will bypass downstream ownership change of Orders triggered by parent account owner change</inlineHelpText>
    <label>Change Downstream Order Owner</label>
    <type>Checkbox</type>
</CustomField>