unpackaged/main/default/objects/Admin_Ref_Variable__mdt/fields/Date_Ref_Value__c.field-meta.xml
<CustomField>
    <fullName>Date_Ref_Value__c</fullName>
    <label>Date Ref Value</label>
    <type>Date</type>
</CustomField>