unpackaged/main/default/objects/Admin_Ref_Variable__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>The name of the variable to be referenced in apex metadata queries</description>
    <label>Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>