unpackaged/main/default/objects/Admin_Ref_Variable__mdt/fields/Number_Ref_Value__c.field-meta.xml
<CustomField>
    <fullName>Number_Ref_Value__c</fullName>
    <description>This variable is used if the reference variable is a number value</description>
    <label>Number Ref Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>