unpackaged/main/default/objects/Admin_Ref_Variable__mdt/fields/Text_Ref_Var__c.field-meta.xml
<CustomField>
    <fullName>Text_Ref_Var__c</fullName>
    <description>If the variable to be referenced by apex or elsewhere is a text variable</description>
    <label>Text Ref Var</label>
    <length>255</length>
    <type>Text</type>
</CustomField>