unpackaged/main/default/objects/Admin_Ref_Variable__mdt/listViews/All_Variables.listView-meta.xml
<ListView>
    <fullName>All_Variables</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>Description__c</columns>
    <columns>Location__c</columns>
    <columns>Name__c</columns>
    <columns>Number_Ref_Value__c</columns>
    <columns>Text_Ref_Var__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Variables</label>
</ListView>