unpackaged/main/default/objects/Admin_Ref_Variable__mdt/listViews/Project_Variables.listView-meta.xml
<ListView>
    <fullName>Project_Variables</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Description__c</columns>
    <columns>Location__c</columns>
    <columns>Number_Ref_Value__c</columns>
    <columns>Text_Ref_Var__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>startsWith</operation>
        <value>project</value>
    </filters>
    <label>Project Variables</label>
</ListView>